2014-03-06  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (gmp_millerrabin): New internal function.
	(mpz_probab_prime_p): New function.
	* mini-gmp/mini-gmp.h (mpz_probab_prime_p): Declare it.
	* mini-gmp/tests/t-pprime_p.c: New test program.
	* mini-gmp/tests/Makefile (CHECK_PROGRAMS): Added t-pprime_p.

2014-03-03  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (mpz_congruent_p): New function.
	* mini-gmp/mini-gmp.h: Declare it.
	* mini-gmp/tests/t-cong.c: New file, based on tests/mpz/t-cong.c.
	* mini-gmp/tests/Makefile (CHECK_PROGRAMS): Added t-cong.

	* mini-gmp/tests/testutils.c (dump): New function. Deleted static
	functions in other files.
	(mpz_set_str_or_abort): Moved function here, from...
	* mini-gmp/tests/t-cmp_d.c: ... old location.

	* mini-gmp/tests/t-reuse.c (dump3): Renamed, from ...
	(dump): ...old name.

2014-03-01  Niels Möller  <nisse@lysator.liu.se>

	* mpn/generic/sec_powm.c (mpn_sec_powm): Clarify comment and
	asserts.

2014-02-28  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/fat/fat.c (fake_cpuid): Handle id 7, make bold claims.

2014-02-27  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/fat/fat_entry.asm: Zero ecx for the benefit of new BMI2
	feature test.

	* mpn/x86_64/fat/fat.c (__gmpn_cpuvec_init): Run CPUVEC_SETUP_coreihwl
	conditionally on BMI2 availability.

	* config.guess: Revert "coreihwl" to "coreisbr" if cpuid indicates that
	BMI2 is missing.
	(x86 cpuid, 2 variants): Zero ecx for the benefit of new BMI2 feature
	test.

2014-02-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (mpn_sqrtrem): New function.
	* mini-gmp/mini-gmp.h: Declare it.
	* mini-gmp/tests/t-sqrt.c: Test it.

2014-02-17  Niels Möller  <nisse@lysator.liu.se>

	* mpn/generic/div_qr_1.c (mpn_div_qr_1): Revert yesterday's fix.
	Hopefully no longer needed.

	* mpn/s390_64/gmp-mparam.h (DIV_QR_1_NORM_THRESHOLD): Up to 1.
	* mpn/s390_64/z10/gmp-mparam.h (DIV_QR_1_NORM_THRESHOLD): Up to 1.
